# OS

Lab1/: CMakeLists.txt
Lab1/Lab1/: CMakeLists.txt  generalFunc.cpp  main.cpp  mealyToMooreFunc.cpp  mealyToMooreFunc.h  mooreToMealyFunc.cpp
Lab2/lab2/: lab2.sln
Lab2/lab2/lab2/: lab2.cpp  lab2.vcxproj  lab2.vcxproj.filters  stdafx.h
Lab2/lab2/lab2/Debug/: lab2.exe.recipe  lab2.ilk  vc142.idb
Lab2/lab2/lab2/Debug/lab2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  lab2.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
lw1/LW1/: LW1.sln
lw1/LW1/LW1/: LW1.cpp  LW1.vcxproj  LW1.vcxproj.filters  generalFunc.h  mooreToMealyFunc.h
lw1/LW1/LW1/x64/Debug/: LW1.exe.recipe  LW1.ilk  vc143.idb
lw1/LW1/LW1/x64/Debug/LW1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  LW1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
lw1/LW1/LW1/x64/Release/: LW1.exe.recipe  LW1.iobj  LW1.ipdb
lw1/LW1/LW1/x64/Release/LW1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  LW1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
lw1/LW1/x64/Release/: input2.csv  input3.csv  output.csv  output2.csv  output3.csv
lw2/: CMakeLists.txt  LW2.cpp  LW2.h  generalFunc.cpp  generalFunc.h  mealyMinimisationFunc.cpp  mealyMinimisationFunc.h  mooreMinimisationFunc.cpp  mooreMinimisationFunc.h
